err/django-short-url.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CodeConvert-2.0.4.egg-info'...
Compiling './lib/python3.5/site-packages/CodeConvert.py'...
***   File "./lib/python3.5/site-packages/CodeConvert.py", line 58
    print TIPS_UTF8[k] if debug else ''
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/TimeConvert'...
Listing './lib/python3.5/site-packages/TimeConvert-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/djadmin'...
Listing './lib/python3.5/site-packages/djadmin/templates'...
Listing './lib/python3.5/site-packages/djadmin/templates/admin'...
Listing './lib/python3.5/site-packages/djadmin/templatetags'...
Listing './lib/python3.5/site-packages/django_admin-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/django_excel_response2-2.0.8.dist-info'...
Listing './lib/python3.5/site-packages/django_models_ext-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/django_short_url'...
Listing './lib/python3.5/site-packages/django_short_url/migrations'...
Listing './lib/python3.5/site-packages/django_short_url/templates'...
Listing './lib/python3.5/site-packages/django_short_url/templates/django_short_url'...
Listing './lib/python3.5/site-packages/django_short_url-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/django_six-1.0.4.dist-info'...
Listing './lib/python3.5/site-packages/furl'...
Listing './lib/python3.5/site-packages/furl-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/models_ext'...
Listing './lib/python3.5/site-packages/orderedmultidict'...
Listing './lib/python3.5/site-packages/orderedmultidict-0.7.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/screen'...
Listing './lib/python3.5/site-packages/screen-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shortuuid'...
Listing './lib/python3.5/site-packages/shortuuid-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tzlocal'...
Listing './lib/python3.5/site-packages/tzlocal/test_data'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc/conf.d'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var/db'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc/sysconfig'...
Listing './lib/python3.5/site-packages/tzlocal-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
